# second-brain-mcp

./: .env.docker.example  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CUSTOMIZE.md  INSTALL.md  SECURITY.md  TROUBLESHOOT.md  WRITE-WORKFLOW.md
docs/superpowers/plans/: 2026-04-16-fm-api-embedder.md
docs/superpowers/specs/: 2026-04-16-fm-api-embedder-design.md
src/second_brain_mcp/: __init__.py  cli.py  config.py  indexer.py  prompts.py  server.py  writer.py
template-vault/: EXAMPLE-note.md  _index.md
tests/: conftest.py  test_config.py  test_http_transport.py  test_index_stamp.py  test_indexer_embed_fn.py  test_indexer_smoke.py  test_path_traversal.py  test_server_smoke.py  test_writer.py
