[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "second-brain-mcp"
version = "1.2.0"
description = "MCP server that turns an Obsidian vault into semantic memory for any coding agent (stdio + streamable-http, API-only embedder)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alex Gabbasov", email = "shura.gabbasov@mail.ru" }]
requires-python = ">=3.10"
keywords = ["mcp", "obsidian", "memory", "claude", "agent", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.9",
    "chromadb>=0.5",
    "pyyaml>=6.0",
    "openai>=1.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
second-brain-mcp = "second_brain_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/noesskeetit/second-brain-mcp"
Issues = "https://github.com/noesskeetit/second-brain-mcp/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
